# gh-audit

./: .bazelrc  .gitattributes  .gitignore  AUDITING.md  Architecture.md  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  TODO.md  TODO.txt  go.mod  go.sum  main.go
.claude/skills/formal-gap-hunt/: SKILL.md
.claude/workflows/: formal-gap-hunt.js
.github/workflows/: test.yml
cmd/: BUILD.bazel  annotate_commits.go  backfill.go  cmd_fixes_test.go  config.go  export.go  import.go  reaudit.go  report.go  report_test.go  root.go  sync.go  sync_test.go  verify.go  verify_test.go
docs/: github-audit-log-comparison.md
examples/: open-source.yaml  run.sh
internal/config/: BUILD.bazel  config.go  config_test.go  fingerprint.go  fingerprint_test.go
internal/db/: BUILD.bazel  appender.go  audit.go  auditrun.go  auditrun_test.go  commits.go  committer_id_test.go  cursor.go  db.go  db_bench_test.go  db_fixes_test.go  db_test.go  history.go  history_test.go  org_repos.go  parquet.go  parquet_test.go  prs.go  schema.go
internal/github/: BUILD.bazel  caching.go  caching_freeze_test.go  caching_test.go  client.go  client_test.go  fuzz_test.go  graphql.go  graphql_test.go  merge.go  merge_test.go  retry.go  revert.go  revert_autorevert_diff_test.go  revert_bench_test.go  revert_emptypatch_test.go  revert_test.go  status_contexts_test.go  tokenpool.go  tokenpool_429_test.go  tokenpool_test.go
internal/model/: BUILD.bazel  README.md  fuzz_test.go  types.go
internal/model/testdata/fuzz/FuzzParseCoAuthors/: 9a68627e1fad4f48
internal/report/: BUILD.bazel  exempt_flag_test.go  fuzz_test.go  manifest.go  manifest_test.go  report.go  report_bench_test.go  report_test.go  rules.go  rules_test.go  xlsx.go  xlsx_test.go
internal/sync/: BUILD.bazel  annotations.go  audit.go  audit_bench_test.go  audit_fixes_test.go  audit_test.go  checks_spec_test.go  cursor_graph_test.go  dbwriter.go  dbwriter_test.go  exempt_signing_test.go  exempt_spec_test.go  history.go  history_spec_test.go  history_test.go  pipeline.go  pipeline_test.go  progress.go  recovery_integration_test.go
internal/ui/: sync.go
internal/version/: BUILD.bazel  version.go  version_test.go
scripts/: bench.sh  test-fixtures.sh
testdata/: scenarios.md
tla/: Approval.tla  Approval_bait.cfg  Approval_green.cfg  Approval_red.cfg  Checks.tla  Checks_bait.cfg  Checks_green.cfg  Checks_red.cfg  EmptyCommit.tla  EmptyCommit_bait.cfg  EmptyCommit_green.cfg  EmptyCommit_red.cfg  Exempt.tla  Exempt_amber.cfg  Exempt_bait.cfg  Exempt_green.cfg  Exempt_red.cfg  History.tla  History_bait.cfg  History_green.cfg  History_red.cfg  README.md  Revert.tla  Revert_bait.cfg  Revert_green.cfg  Revert_red.cfg  Verdict.tla  Verdict_amber.cfg  Verdict_bait.cfg  Verdict_green.cfg  Verdict_red.cfg  run.sh
tla/gaps/: 2026-07-03.md  README.md
