module(
    name = "gh_audit",
    version = "0.0.0",
)

# ── dev toolchain exposure via direnv ────────────────────────────────────────
bazel_dep(name = "bazel_env.bzl", version = "0.7.2", dev_dependency = True)

# ── Go rules ─────────────────────────────────────────────────────────────────
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# go-duckdb needs a hand-owned BUILD: gazelle can neither drop arrow.go (we use
# database/sql, not the Arrow API, and the apache/arrow-go cgo bridge won't
# build under Bazel) nor stage the prebuilt per-platform libduckdb.a that
# cgo_static.go links. We turn generation off and patch in a BUILD that does
# both (see //third_party/go-duckdb:add-build.patch).
go_deps.gazelle_override(
    build_file_generation = "off",
    path = "github.com/marcboeker/go-duckdb",
)
go_deps.module_override(
    patch_strip = 1,
    patches = ["//third_party/go-duckdb:add-build.patch"],
    path = "github.com/marcboeker/go-duckdb",
)

# use_repo is kept in sync by `bazel mod tidy`.
use_repo(
    go_deps,
    "com_github_bradleyfalzon_ghinstallation_v2",
    "com_github_google_go_github_v72",
    "com_github_marcboeker_go_duckdb",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "com_github_xuri_excelize_v2",
    "in_gopkg_yaml_v3",
    "org_golang_x_sync",
)

# ── CC toolchain: host-autodetected on every platform ────────────────────────
# cgo (go-duckdb) links the prebuilt per-platform libduckdb.a. The Linux
# archive is GCC-built against GNU libstdc++ (dual __cxx11 ABI), so the linker
# must supply real libstdc++ — a hermetic zig/clang toolchain cannot (zig
# ships only LLVM libc++; the link fails with undefined std::__cxx11 symbols).
# macOS needs Xcode anyway (zig ships no Apple SDK). So both platforms use
# Bazel's autodetected host toolchain: Xcode on macOS, GCC on Linux/CI.
