load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go",
        "fingerprint.go"],
    importpath = "github.com/stefanpenner/gh-audit/internal/config",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/model",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go",
        "fingerprint_test.go"],
    embed = [":config"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
